Changed message renderer to append to same batch instance